-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2014-08-10	pwessel
	* gmt_init.c:		Allow UTM projections to not set the zone; if so then the
				zone is automatically determined from the region
	* gmt_map.c:		Determine best UTM zone from region if no zone is set.
	* gmt_parse.c:		Allow new -R flavor for grid creation: -R[L|C|R][T|M|B]<x0>/<y0>/<nx>/<ny>,
				where one specifies a fixed point relative to a rectangular
				domain using the justification codes, and then adds the
				dimensions of the new grid.  The grid spacings must be
				set via the -I option.
	* psxy[z].c:		Added optional arg to -Sv|m +b+e modifiers to set the kind
				of arrow head to use.  Choose from t (termimal line),
				c (circle) or a (arrow) [Default].
	* grdvector.c:		---"---
	
2014-07-17	pwessel
	* psxy[z].c:		Added modifier +p[<pen>] to the front specification so that
				one can specify an alternate symbol outline, or no outline
				at all (by not specifying <pen>).

2014-06-07	pwessel
	* ps2raster.c:		Added new device -Ts for SVG (scalable vector graphics).

2014-05-30	pwessel
	* grdtrack.c:		Did not properly handle the distance units specified in -E.
				Now we pre-scan for units to ensure that only ONE unit is used
				for the various distance options, then apply that unit in the
				distance calculations throughout.  Results will use that unit.
				If no unit is specified we default to km (geographic) or user
				unit (Cartesian).  Also required some changes in gmt_support.c
				Response to forum message # 689.

2014-05-29	pwessel
	* gmt_plot.c:		The length of the map scale bar was incorrectly calculated
				for some oblique projections.  Issue #569.

2014-05-26	pwessel
	* gmt_map.c:		The map region clip path for -JE/e was hardwired to a full
				circle and did not care about -R setting.