@@ -3,7 +3,7 @@ Creating GMT Graphics
 
 .. only:: not latex
 
-    See PDF documentation.
+    See separate entry for GMT Examples under Gallery.
 
 .. only:: latex
 
@@ -1297,7 +1297,7 @@ Creating GMT Animations
 
 .. only:: not latex
 
-    See PDF documentation.
+    See separate entry for GMT Animations under Gallery.
 
 .. only:: latex
 
