@@ -2,6 +2,10 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2014-09-08	pwessel
+	* ps2raster.c:		For non-PDF output, only handled transparency via @<transp>
+				and not via -t<transp> option.
+
 2014-08-10	pwessel
 	* gmt_init.c:		Allow UTM projections to not set the zone; if so then the
 				zone is automatically determined from the region
